package ex1;
public interface EmployeeAdaptorInterface {

    public String getName();
    public long getId();
    public double getSalary();
    
}
